syntax = "proto3";

import "graph.proto";
import "block.proto";
import "google/protobuf/any.proto";

package project;
option go_package = "project";

service ProjectService {
    rpc GetProject(GetProjectRequest) returns (GetProjectResponse) {}
    rpc GetProjects(GetProjectsRequest) returns (GetProjectsResponse) {}
    rpc CreateProject(CreateProjectRequest) returns (CreateProjectResponse) {}
    rpc DeleteProject(DeleteProjectRequest) returns (DeleteProjectResponse) {}
    rpc GetResources(GetResourcesRequest) returns (GetResourcesResponse) {}

    rpc GetBlocks(GetBlocksRequest) returns (GetBlocksResponse) {}
    rpc AddBlock(AddBlockRequest) returns (AddBlockResponse) {}
    rpc RemoveBlock(RemoveBlockRequest) returns (RemoveBlockResponse) {}
    rpc UpdateBlock(UpdateBlockRequest) returns (UpdateBlockResponse) {}

    rpc GetEdges(GetEdgesRequest) returns (GetEdgesResponse) {}
    rpc AddEdge(AddEdgeRequest) returns (AddEdgeResponse) {}
    rpc RemoveEdge(RemoveEdgeRequest) returns (RemoveEdgeResponse) {}

    rpc RunWorklow(RunWorkflowRequest) returns (RunOutput) {}
    rpc RunBlock(RunBlockRequest) returns (RunOutput) {}
}

message RunWorkflowRequest {
    string project_id = 1;
    string node_id = 2;
    google.protobuf.Any input = 3;
}

message RunBlockRequest {
    string project_id = 1;
    string block_id = 2;
    google.protobuf.Any input = 3;
}

message RunOutput {
    google.protobuf.Any output = 1;
}

message Resource {
    string id = 1;
    string name = 2;
    string image = 3;
}

message Project {
    string id = 1;
    string name = 2;
    string description = 3;
    string owner = 4;
    string created_at = 5;
    string updated_at = 6;
    graph.Graph graph = 7;
}

message GetProjectRequest {
    string id = 1;
}

message GetProjectResponse {
    Project project = 1;
}

message GetProjectsRequest {
    string name = 1;
}

message GetProjectsResponse {
    repeated Project projects = 1;
}

message CreateProjectRequest {
    Project project = 1;
}

message CreateProjectResponse {
    Project project = 1;
}

message DeleteProjectRequest {
    string id = 1;
}

message DeleteProjectResponse {
    Project project = 1;
}

message GetResourcesRequest {
    string id = 1;
}

message GetResourcesResponse {
    repeated Resource resources = 1;
}

message AddBlockRequest {
    string project_id = 1;
    block.Block block = 2;
}

message AddBlockResponse {
    block.Block block = 1;
}

message RemoveBlockRequest {
    string project_id = 1;
    string block_id = 2;
}

message RemoveBlockResponse {
    block.Block block = 1;
}

message GetBlocksRequest {
    string project_id = 1;
}

message GetBlocksResponse {
    repeated block.Block blocks = 1;
}

message UpdateBlockRequest {
    string project_id = 1;
    block.Block block = 2;
}

message UpdateBlockResponse {
    block.Block block = 1;
}

message AddEdgeRequest {
    string project_id = 1;
    graph.Edge edge = 2;
}

message AddEdgeResponse {
    graph.Edge edge = 1;
}

message RemoveEdgeRequest {
    string project_id = 1;
    string edge_id = 2;
}

message RemoveEdgeResponse {
    graph.Edge edge = 1;
}

message GetEdgesRequest {
    string project_id = 1;
}

message GetEdgesResponse {
    repeated graph.Edge edges = 1;
}
